--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ vcpkg = "0.2.15"
 
 [dependencies]
 bytemuck = "1.23.2"
+crossbeam-channel = "0.5.15"
 ffmpeg-next = "7.1.0"
 miniaudio_aurex = "0.11.22"
 soxr = "0.6.0"
