--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ crate-type = ["rlib", "cdylib"]
 [build-dependencies]
 cc = "1.2.31"
 vcpkg = "0.2.15"
+uniffi = { version = "0.30.0", features = [ "build" ] }
 
 [dependencies]
 bytemuck = "1.23.2"
@@ -24,3 +25,8 @@ crossbeam-channel = "0.5.15"
 ffmpeg-next = "7.1.0"
 miniaudio_aurex = "0.11.22"
 soxr = "0.6.0"
+uniffi = { version = "0.30.0", features = [ "cli" ] }
+
+[[bin]]
+name = "uniffi-bindgen"
+path = "uniffi-bindgen.rs"
