--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ crossbeam-channel = "0.5.15"
 ffmpeg-next = "7.1.0"
 miniaudio_aurex = "0.11.22"
 soxr = "0.6.0"
+tokio = {version = "1.48.0", features = ["sync", "rt-multi-thread", "macros"]}
 uniffi = { version = "0.30.0", features = [ "cli" ] }
 
 [[bin]]
