--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 miniaudio.c linguist-detectable=false
 miniaudio.h linguist-detectable=false
+out/uniffi/libaurex/libaurex.kt linguist-detectable=false
