--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,15 +15,14 @@ categories = ["multimedia"]
 crate-type = ["rlib", "cdylib", "staticlib"]
 
 [build-dependencies]
-cc = "1.2.31"
 vcpkg = "0.2.15"
 uniffi = { version = "0.30.0", features = [ "build" ] }
 
 [dependencies]
 bytemuck = "1.23.2"
+cpal = "0.17.1"
 crossbeam-channel = "0.5.15"
 ffmpeg-next = "7.1.0"
-miniaudio_aurex = "0.11.22"
 soxr = "0.6.0"
 tokio = {version = "1.48.0", features = ["sync", "rt-multi-thread", "macros"]}
 uniffi = { version = "0.30.0", features = [ "cli" ] }
