--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ uniffi = { version = "0.30.0", features = [ "build" ] }
 bytemuck = "1.23.2"
 cpal = "0.17.1"
 crossbeam-channel = "0.5.15"
+dart-sys = "4.1.5"
 ffmpeg-next = "7.1.0"
 soxr = "0.6.0"
 tokio = {version = "1.48.0", features = ["sync", "rt-multi-thread", "macros"]}
